<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cha-Ching Exchange</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Currency chooser</string>
    <string name="reset_pinned_currencies">Clear pinned currencies</string>
    <string name="offline_mode">Offline mode</string>
    <string name="clear_cached">Clear offline cache</string>
    <string name="currency_from">FROM</string>
    <string name="currency_to">TARGET CURRENCY</string>
    <string name="button_exchange">GET EXCHANGE RATE</string>
    <string name="zero_amount">0.00</string>
    <string name="choose_currencies">Currency selector</string>
    <string name="base_currency_layout_enter_amount">0.00</string>
    <string name="enter_amount">Amount</string>
    <string name="currency_GBP">GBP British Pound</string>
    <string name="currency_Flag">Flag</string>
    <string name="currency_results">Results</string>
    <string name="currency_results_amount">0.00</string>
    <string name="currency_results_code">Currency type</string>
    <string name="currency_results_rate">Rate</string>
    <string name="currency_code">Code</string>
    <string name="popupmenu_pin_currency">Pin currency</string>
    <string name="popupmenu_swap_to_base">Set as base currency</string>
    <string name="popupmenu_remove_cache">Remove offline cache</string>
    <string name="popmenu_show_1day">Show 1 day graph</string>
    <string name="popmenu_show_5day">Show 5 day graph</string>
    <string name="popmenu_show_1yr">Show 1 year graph</string>
    <string name="title_activity_settings">Currencies</string>
    <string name="settings_results">Choose currency results</string>
    <string name="title_activity_about">About</string>
    <string name="menu_about">About</string>
    <string name="support_information">Support and Information</string>
    
    <string name="help_feedback">

            Cha-Ching Exchange is a simple and easy to use live currency converter, aimed at anyone who requires live exchange
            rate information for up to 32 world currencies. It also has offline functionality for anyone travelling abroad,
            or simply out of coverage range where live information is not available. All offline information will be correct
            to the last time the currency information was downloaded.

             <Data><![CDATA[ <br><br><font color=#9143d6><b>Instructions</b></font> ]]> </Data>
             <Data><![CDATA[ <br><br>Simply enter the amount you want to convert then choose a base currency. Also click on result currencies for graph comparison data]]></Data>
             <Data><![CDATA[ <br><br><font color=#9143d6><b>Main menu options</b></font> ]]> </Data>
             <Data><![CDATA[ <br><br><b>Currency chooser:</b> ]]></Data>
             <Data><![CDATA[ <br>Result currencies can be turned on and off]]></Data>
             <Data><![CDATA[ <br><br><b>Offline mode:</b> ]]></Data>
             <Data><![CDATA[ <br>This toggles offline mode]]></Data>
             <Data><![CDATA[ <br><br><b>Clear offline cache:</b> ]]></Data>
             <Data><![CDATA[ <br>Removes ALL offline data for all currencies]]></Data>
             <Data><![CDATA[ <br><br><b>Clear pinned currencies:</b> ]]></Data>
             <Data><![CDATA[ <br>If you have pinned any favourite currencies then this option clears all the pins (see below for pinning a currency)]]></Data>
             <Data><![CDATA[ <br><br><font color=#9143d6><b>Currency menu options</b></font> ]]> </Data>
             <Data><![CDATA[ <br><br><b>Pin Currency:</b> ]]></Data>
             <Data><![CDATA[ <br>This option allows you to ‘pin’ any favourite currencies. Pressing the ‘pin toggle’ in the menu quickly and easily switches between the two]]></Data>
             <Data><![CDATA[ <br><br><b>Set as base currency:</b> ]]></Data>
             <Data><![CDATA[ <br>Changes the current base currency]]></Data>
             <Data><![CDATA[ <br><br><b>Remove offline cache:</b> ]]></Data>
             <Data><![CDATA[ <br>This option will remove individual offline currency data (available offline data for each currency is denoted by the download symbol)]]></Data>
             <Data><![CDATA[ <br><br><b>Show 1, 5 day or 1 year graph:</b> ]]></Data>
             <Data><![CDATA[ <br>Live graph data will be downloaded for rate comparison against selected base currency]]></Data>
             <Data><![CDATA[ <br><br><br>If you have any questions or feedback please email:]]></Data>
             <Data><![CDATA[ <br><br><a href="mailto:treefrogapplications@gmail.com">treefrogapplications@gmail.com</a><br> ]]> </Data>
    </string>

    <string name="terms_conditions">
        <Data><![CDATA[ <font color=#9143d6><b>Last updated: 03/2015.</b></font> ]]> </Data>
        <Data><![CDATA[ <br><br>Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully before using
        Cha-Ching Exchange by Tree Frog Apps ("us", "we", or "our").]]></Data>
        <Data><![CDATA[ <br><br>Your access to and use of the Service is conditioned on your acceptance of and compliance with
        these Terms. These Terms apply to all visitors, users and others who access or use the Service.
        By accessing or using the Service you agree to be bound by these Terms. If you disagree with any
        part of the terms then you may not access the Service.]]></Data>
        <Data><![CDATA[ <br><br><b>Termination</b> ]]></Data>
        <Data><![CDATA[ <br><br>We may terminate or suspend access to our Service immediately, without prior notice or liability, for
        any reason whatsoever, including without limitation if you breach the Terms.
        All provisions of the Terms which by their nature should survive termination shall survive
        termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and
        limitations of liability.<br>]]></Data>
    </string>

    <string name="privacy_policy">
        Cha-Ching Exchange does not collect or use any personal information

    </string>
    <string name="tree_frog_apps">\u00a9 Tree Frog Apps</string>
    <string name="results_date">Date</string>
    <string name="results_time">Time</string>
    <string name="currency_comparison_graph">Currency Comparison Graph</string>
    <string name="dialog_ok_button">Close Window</string>
    <string name="rate_data">Downloading Rate Data ...</string>
    <string name="graph_time_scale">Graph Time Scale</string>
    <string name="five_day_button">Five Day</string>
    <string name="one_day_button">One Day</string>
    <string name="one_year_button">One Year</string>
    <string name="one_day">ONE DAY</string>
    <string name="five_day">FIVE DAY</string>
    <string name="one_year">ONE YEAR</string>

</resources>

