<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> currencies_activity
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_choose_currencies"
        android:title="@string/choose_currencies"
        android:orderInCategory="1"
<<<<<<< HEAD
=======
    <item android:id="@+id/menu_pin_toggle_id"
        android:title=""
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_reset_pinned"
        android:title="@string/reset_pinned_currencies"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:orderInCategory="4"
>>>>>>> Features
=======
>>>>>>> currencies_activity
        app:showAsAction="never" />
</menu>
