<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    tools:style="AppTheme.Base"
    >

    <item android:id="@+id/menu_pin_currency"
        android:title="@string/popupmenu_pin_currency"
        android:orderInCategory="1"
        app:showAsAction="never"
        />

    <item android:id="@+id/menu_swap_to_base_currency"
        android:title="@string/popupmenu_swap_to_base"
        android:orderInCategory="2"
        app:showAsAction="never"
        />

    <item android:id="@+id/menu_remove_cache"
        android:title="@string/popupmenu_remove_cache"
        android:orderInCategory="3"
        app:showAsAction="never"
        />
</menu>
