<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/my_tool_action_bar"></include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@drawable/gradient">
     </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/flag_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flag_ic_holder"
            android:contentDescription="@string/currency_Flag" />

        <EditText
            android:textSize="@dimen/text_standard"
            android:layout_gravity="center_vertical"
            android:id="@+id/amountEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/base_currency_layout_enter_amount"
            android:inputType="numberDecimal"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spinnerCurrencyFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="4dp"
            android:entries="@array/currency_spinner"
            android:spinnerMode="dropdown"
            android:layout_gravity="center_vertical"
            android:background="@drawable/spinner_menu"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"

        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:textAlignment="gravity"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/currency_results"
            android:textSize="16sp"
            android:textColor="@color/myRed"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listView"
                android:divider="@null"
                android:dividerHeight="0dp"/>
        </LinearLayout>




    </LinearLayout>

</LinearLayout>


