<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:showDividers="none">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/flagTypeCurrencyActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/currency_Flag"
            android:src="@drawable/flag_ic_00_empty" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/currencyCodeCurrencyActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code"
                android:textColor="@color/black"
                android:textSize="@dimen/text_bigger" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_vertical_margin">

            <TextView

                android:id="@+id/currencyTypeCurrencyActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/currency_results_code"
                android:textColor="@color/black"
                android:textSize="@dimen/text_bigger" />
        </LinearLayout>

        <ToggleButton
            android:textOff="off"
            android:textOn="on"
            android:id="@+id/setOnOffCurrencyActivity"
            android:layout_width="40dp"
            android:layout_height="23dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_toggle"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="fill_parent"></LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/editTextGrey"></LinearLayout>


    </LinearLayout>


</LinearLayout>