<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> context_menu_on_listview
=======
>>>>>>> context_menu_on_listview
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:showDividers="none">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/flagType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/currency_Flag"
            android:src="@drawable/flag_ic_aud_00" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/convertedCurrencyCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:text="@string/currency_code"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_bigger" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5">

                    <TextView

                        android:id="@+id/convertedCurrencyType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/currency_results_code"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_bigger" />

                </LinearLayout>

            </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="fill_parent"></LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/editTextGrey"></LinearLayout>


    </LinearLayout>


<<<<<<< HEAD
<<<<<<< HEAD
</LinearLayout>
=======
=======
>>>>>>> currencies_activity
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/my_currency_tool_action_bar"></include>

    <ListView
        android:id="@+id/listViewCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp" />

<<<<<<< HEAD
    </LinearLayout>
>>>>>>> currencies_activity
=======
</LinearLayout>
>>>>>>> context_menu_on_listview
=======
</LinearLayout>
>>>>>>> context_menu_on_listview
=======
    </LinearLayout>
>>>>>>> currencies_activity
